fix(icons): missing icons